@@ -835,9 +835,7 @@ there are four \tet{varargs} functions:
 
 \fun{GEN}{mkintn}{long n, ...}
 returns the non-negative \typ{INT} whose development in base $2^{32}$
-is given by the following $n$ words (\kbd{unsigned long}). It is assumed that
-all such arguments are less than $2^{32}$ (the actual \kbd{sizeof(long)} is
-irrelevant, the behavior is also as above on $64$-bit machines).
+is given by the following $n$ 32bit-words (\kbd{unsigned int}).
 \bprog
   mkintn(3, a2, a1, a0);
 @eprog
